force-app/main/default/objects/Deposit_Policy__mdt/Deposit_Policy__mdt.object-meta.xml
<CustomObject>
    <label>Deposit Policy</label>
    <pluralLabel>Deposit Policies</pluralLabel>
</CustomObject>