force-app/main/default/objects/Deposit_Policy__mdt/fields/Basis__c.field-meta.xml
<CustomField>
  <fullName>Basis__c</fullName>
  <label>Basis</label>
  <type>Picklist</type>
  <valueSet>
    <valueSetDefinition>
      <sorted>true</sorted>
      <value><fullName>Total</fullName><default>true</default><label>Total</label></value>
      <value><fullName>Subtotal</fullName><default>false</default><label>Subtotal</label></value>
    </valueSetDefinition>
  </valueSet>
</CustomField>