force-app/main/default/objects/Deposit_Policy__mdt/fields/Business_Unit_Id__c.field-meta.xml
<CustomField>
  <fullName>Business_Unit_Id__c</fullName>
  <label>Business Unit ID</label>
  <type>Text</type>
  <length>18</length>
  <description>18-char Id of the Business Unit (leave blank for global policy).</description>
</CustomField>