force-app/main/default/objects/Deposit_Policy__mdt/fields/Deposit_Percent__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Percent__c</fullName>
    <label>Deposit Percent</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
    <description>Percent of Basis to collect as deposit.</description>
</CustomField>