force-app/main/default/objects/Deposit_Policy__mdt/fields/Max_Amount__c.field-meta.xml
<CustomField>
    <fullName>Max_Amount__c</fullName>
    <label>Maximum Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
    <description>Lower bound of proposal total for this rule (inclusive).</description>
</CustomField>