force-app/main/default/objects/Deposit_Policy__mdt/fields/Min_Amount__c.field-meta.xml
<CustomField>
    <fullName>Min_Amount__c</fullName>
    <label>Minimum Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
    <description>Upper bound for this rule (leave blank for no cap).</description>
</CustomField>