force-app/main/default/objects/Deposit_Policy__mdt/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>Priority</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <description>Higher numbers win if multiple rules match.</description>
</CustomField>