force-app/main/default/objects/Deposit_Policy__mdt/fields/Retainage_Percent__c.field-meta.xml
<CustomField>
    <fullName>Retainage_Percent__c</fullName>
    <label>Retainage Percent</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
    <description>Percent of contract to be retained for final billing (optional).</description>
</CustomField>