force-app/main/default/objects/Deposit_Policy__mdt/fields/Terms_Template__c.field-meta.xml
<CustomField>
    <fullName>Terms_Template__c</fullName>
    <label>Terms Template</label>
    <length>255</length>
    <type>Text</type>
    <description>Terms and Conditions for Display on Deposit.</description>
</CustomField>